[tool.poetry]
name = "ros2_test"
version = "2.0.0"
description = ""
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.5"
xarray = ">22"
toml = "^0.10"
psutil = "^5.8"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
pytest = "^5.2"
black = "^20.8b"
flake8 = "^3.8"
ipykernel = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
